--- a/src/notebooks/Bronze_to_Silver_Schema_Analysis.ipynb
+++ b/src/notebooks/Bronze_to_Silver_Schema_Analysis.ipynb
@@ -33,10 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "754aa749",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔍 BRONZE TO SILVER SCHEMA ANALYSIS\n",
+      "============================================================\n",
+      "✅ Libraries imported\n",
+      "📅 Analysis timestamp: 2025-07-18T12:27:23.918942\n",
+      "📥 Bronze source: RDS_Fabric_Foundry_workspace_Gaiye_Retail_Solution_Test_IDM_LH_bronze\n",
+      "📤 Silver target path: Files/Retail/\n",
+      "📊 Bronze tables to analyze: 10\n",
+      "🎯 Main silver entities: order, customer, brandProduct\n",
+      "✅ Microsoft Fabric PySpark environment ready\n"
+     ]
+    }
+   ],
    "source": [
     "# Import required libraries\n",
     "import pandas as pd\n",
@@ -75,35 +91,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "d83db284",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔧 ENVIRONMENT DETECTION\n",
+      "========================================\n",
+      "⚠️  Spark session test failed: AttributeError\n",
+      "🔧 Falling back to local environment detection\n",
+      "\n",
+      "🎯 Environment: local_no_spark\n",
+      "🔧 Analysis-only mode\n",
+      "\n",
+      "📋 AVAILABLE CAPABILITIES:\n",
+      "   ❌ Lakehouse Access\n",
+      "   ❌ Spark Sql\n",
+      "   ❌ Data Analysis\n",
+      "   ❌ Transformation Execution\n",
+      "========================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Environment detection and Spark session handling\n",
+    "print(\"🔧 ENVIRONMENT DETECTION\")\n",
+    "print(\"=\" * 40)\n",
+    "\n",
+    "# Initialize variables\n",
+    "ENVIRONMENT = \"unknown\"\n",
+    "spark = None\n",
+    "\n",
+    "# Check if we're in a Fabric environment by testing if spark exists\n",
+    "try:\n",
+    "    # Try to access spark variable to see if it exists\n",
+    "    spark\n",
+    "    # If spark exists, try to use it\n",
+    "    spark.sql(\"SELECT 1\")\n",
+    "    print(\"✅ Spark session already available (Fabric environment)\")\n",
+    "    ENVIRONMENT = \"fabric\"\n",
+    "except NameError:\n",
+    "    # Spark not available - check environment type\n",
+    "    print(\"🔍 Spark not available - determining environment...\")\n",
+    "    \n",
+    "    # Check for Fabric-specific indicators\n",
+    "    import os\n",
+    "    import sys\n",
+    "    \n",
+    "    # Check if we're in a Fabric/Synapse environment\n",
+    "    if any(indicator in str(sys.path) for indicator in ['synapse', 'fabric', 'lakehouse']):\n",
+    "        print(\"🎯 Detected Fabric-like environment\")\n",
+    "        ENVIRONMENT = \"fabric_local\"\n",
+    "    else:\n",
+    "        print(\"🔧 Detected local development environment\")\n",
+    "        ENVIRONMENT = \"local\"\n",
+    "    \n",
+    "    # Try to initialize local Spark (optional for development)\n",
+    "    try:\n",
+    "        print(\"🔧 Attempting local Spark initialization...\")\n",
+    "        from pyspark.sql import SparkSession\n",
+    "        \n",
+    "        spark = SparkSession.builder \\\n",
+    "            .appName(\"Bronze_to_Silver_Schema_Analysis\") \\\n",
+    "            .config(\"spark.sql.adaptive.enabled\", \"true\") \\\n",
+    "            .config(\"spark.sql.adaptive.coalescePartitions.enabled\", \"true\") \\\n",
+    "            .getOrCreate()\n",
+    "        \n",
+    "        print(\"✅ Local Spark session initialized\")\n",
+    "        print(f\"🔧 Spark version: {spark.version}\")\n",
+    "        ENVIRONMENT = \"local_spark\"\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️  Local Spark initialization failed: {type(e).__name__}\")\n",
+    "        print(\"💡 This is normal if Java/Spark isn't configured locally\")\n",
+    "        print(\"🎯 Notebook will run in analysis-only mode\")\n",
+    "        ENVIRONMENT = \"local_no_spark\"\n",
+    "        spark = None\n",
+    "except Exception as e:\n",
+    "    print(f\"⚠️  Spark session test failed: {type(e).__name__}\")\n",
+    "    print(\"🔧 Falling back to local environment detection\")\n",
+    "    ENVIRONMENT = \"local_no_spark\"\n",
+    "    spark = None\n",
+    "\n",
+    "print(f\"\\n🎯 Environment: {ENVIRONMENT}\")\n",
+    "\n",
+    "# Set appropriate capabilities based on environment\n",
+    "if ENVIRONMENT == \"fabric\":\n",
+    "    print(\"✅ Full Fabric capabilities available\")\n",
+    "    CAPABILITIES = {\n",
+    "        \"lakehouse_access\": True,\n",
+    "        \"spark_sql\": True,\n",
+    "        \"data_analysis\": True,\n",
+    "        \"transformation_execution\": True\n",
+    "    }\n",
+    "elif ENVIRONMENT == \"local_spark\":\n",
+    "    print(\"✅ Local Spark available - limited capabilities\")\n",
+    "    CAPABILITIES = {\n",
+    "        \"lakehouse_access\": False,\n",
+    "        \"spark_sql\": True,\n",
+    "        \"data_analysis\": False,\n",
+    "        \"transformation_execution\": False\n",
+    "    }\n",
+    "else:\n",
+    "    print(\"🔧 Analysis-only mode\")\n",
+    "    CAPABILITIES = {\n",
+    "        \"lakehouse_access\": False,\n",
+    "        \"spark_sql\": False,\n",
+    "        \"data_analysis\": False,\n",
+    "        \"transformation_execution\": False\n",
+    "    }\n",
+    "\n",
+    "print(\"\\n📋 AVAILABLE CAPABILITIES:\")\n",
+    "for capability, available in CAPABILITIES.items():\n",
+    "    status = \"✅\" if available else \"❌\"\n",
+    "    print(f\"   {status} {capability.replace('_', ' ').title()}\")\n",
+    "\n",
+    "print(\"=\" * 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "00c825b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔗 CONNECTIVITY TEST\n",
+      "========================================\n",
+      "🔧 Running in development analysis mode\n",
+      "⚠️  Spark and lakehouse connectivity not available\n",
+      "💡 This notebook is designed for Microsoft Fabric execution\n",
+      "\n",
+      "🎯 CURRENT CAPABILITIES:\n",
+      "   ✅ Environment setup and configuration\n",
+      "   ✅ Schema design and planning\n",
+      "   ✅ Transformation logic development\n",
+      "   ✅ Implementation planning\n",
+      "   ❌ Live data analysis and execution\n",
+      "\n",
+      "📋 RECOMMENDED WORKFLOW:\n",
+      "   1. ✅ Complete analysis and planning (current mode)\n",
+      "   2. 🔄 Transfer notebook to Microsoft Fabric\n",
+      "   3. 🎯 Execute against real lakehouse data\n",
+      "   4. 📊 Perform actual bronze/silver transformation\n",
+      "\n",
+      "🚀 READY FOR ANALYSIS AND PLANNING!\n",
+      "========================================\n"
+     ]
+    }
+   ],
    "source": [
-    "# Optional debugging information \n",
-    "# Quick connectivity test to verify access to both layers\n",
+    "# Environment-aware connectivity test\n",
     "print(\"🔗 CONNECTIVITY TEST\")\n",
     "print(\"=\" * 40)\n",
     "\n",
-    "# Test bronze layer access\n",
-    "try:\n",
-    "    bronze_test = spark.sql(f\"SHOW TABLES IN {BRONZE_DATABASE}\")\n",
-    "    bronze_count = bronze_test.count()\n",
-    "    print(f\"✅ Bronze layer accessible: {bronze_count} tables found\")\n",
-    "    print(f\"   Database: {BRONZE_DATABASE}\")\n",
-    "except Exception as e:\n",
-    "    print(f\"❌ Bronze layer access failed: {str(e)[:80]}...\")\n",
+    "# Check environment and available capabilities\n",
+    "if ENVIRONMENT == \"fabric\":\n",
+    "    print(\"🎯 Running in Microsoft Fabric environment\")\n",
+    "    \n",
+    "    # Test bronze layer access\n",
+    "    try:\n",
+    "        bronze_test = spark.sql(f\"SHOW TABLES IN {BRONZE_DATABASE}\")\n",
+    "        bronze_count = bronze_test.count()\n",
+    "        print(f\"✅ Bronze layer accessible: {bronze_count} tables found\")\n",
+    "        print(f\"   Database: {BRONZE_DATABASE}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Bronze layer access failed: {str(e)[:80]}...\")\n",
     "\n",
-    "# Test silver layer access (current context)\n",
-    "try:\n",
-    "    silver_test = spark.sql(\"SHOW TABLES\")\n",
-    "    silver_count = silver_test.count()\n",
-    "    print(f\"✅ Silver layer accessible: {silver_count} tables found\")\n",
-    "    print(f\"   Context: Current lakehouse\")\n",
-    "except Exception as e:\n",
-    "    print(f\"❌ Silver layer access failed: {str(e)[:80]}...\")\n",
+    "    # Test silver layer access (current context)\n",
+    "    try:\n",
+    "        silver_test = spark.sql(\"SHOW TABLES\")\n",
+    "        silver_count = silver_test.count()\n",
+    "        print(f\"✅ Silver layer accessible: {silver_count} tables found\")\n",
+    "        print(f\"   Context: Current lakehouse\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Silver layer access failed: {str(e)[:80]}...\")\n",
     "\n",
-    "print(f\"\\n🚀 Ready to proceed with full analysis!\")\n",
+    "    print(f\"\\n🚀 Ready to proceed with full analysis!\")\n",
+    "    \n",
+    "elif ENVIRONMENT == \"local_spark\":\n",
+    "    print(\"🔧 Running with local Spark - limited connectivity\")\n",
+    "    print(\"⚠️  Lakehouse connectivity not available\")\n",
+    "    print(\"✅ Spark SQL capabilities available for local data\")\n",
+    "    print(\"💡 Can develop transformation logic without live data\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"🔧 Running in development analysis mode\")\n",
+    "    print(\"⚠️  Spark and lakehouse connectivity not available\")\n",
+    "    print(\"💡 This notebook is designed for Microsoft Fabric execution\")\n",
+    "    print()\n",
+    "    print(\"🎯 CURRENT CAPABILITIES:\")\n",
+    "    print(\"   ✅ Environment setup and configuration\")\n",
+    "    print(\"   ✅ Schema design and planning\")\n",
+    "    print(\"   ✅ Transformation logic development\")\n",
+    "    print(\"   ✅ Implementation planning\")\n",
+    "    print(\"   ❌ Live data analysis and execution\")\n",
+    "    print()\n",
+    "    print(\"📋 RECOMMENDED WORKFLOW:\")\n",
+    "    print(\"   1. ✅ Complete analysis and planning (current mode)\")\n",
+    "    print(\"   2. 🔄 Transfer notebook to Microsoft Fabric\")\n",
+    "    print(\"   3. 🎯 Execute against real lakehouse data\")\n",
+    "    print(\"   4. 📊 Perform actual bronze/silver transformation\")\n",
+    "    print()\n",
+    "    print(\"🚀 READY FOR ANALYSIS AND PLANNING!\")\n",
+    "\n",
     "print(\"=\" * 40)"
    ]
   },
@@ -705,7 +902,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.9"
   }
  },
