simple data model tested

--- a/src/notebooks/schema/Retail_Data_Model_Simplified_14.ipynb
+++ b/src/notebooks/schema/Retail_Data_Model_Simplified_14.ipynb
@@ -1,6 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b34be4c4",
+   "metadata": {},
+   "source": [
+    "# Retail Data Model - Simplified & Enhanced\n",
+    "\n",
+    "## Overview\n",
+    "This notebook contains the simplified retail data model, reduced from 64 tables to 14 tables while maintaining all essential retail functionality.\n",
+    "\n",
+    "## Key Achievements\n",
+    "- **78% complexity reduction**: From 64 to 14 tables\n",
+    "- **Industry-aligned naming**: Standard retail terminology\n",
+    "- **Fabric Lakehouse optimized**: Delta tables without unnecessary constraints\n",
+    "- **Complete audit trail**: CreatedBy/UpdatedBy fields on key entities\n",
+    "- **Soft delete capability**: IsActive flags where appropriate\n",
+    "\n",
+    "## Schema Structure\n",
+    "- **Customer Management**: 7 tables (Customer, Location, Accounts, Relationships)\n",
+    "- **Product Catalog**: 3 tables (Product, Brand, BrandCategory)\n",
+    "- **Order Processing**: 4 tables (Order, OrderLine, OrderStatus, OrderPayment)\n",
+    "\n",
+    "## Business Value\n",
+    "- Faster development with simplified schema\n",
+    "- Lower maintenance costs\n",
+    "- Better performance on modern data platforms\n",
+    "- Enterprise-ready for retail operations\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "27d6bf9a",
@@ -14,7 +45,7 @@
     "################################################################################################\n",
     "\n",
     "# Configuration\n",
-    "SCHEMA_NAME = \"retail\"\n",
+    "SCHEMA_NAME = \"retail_simple\"\n",
     "spark.sql(f\"CREATE DATABASE IF NOT EXISTS {SCHEMA_NAME}\")\n",
     "print(f\"✅ {SCHEMA_NAME} schema ready!\")\n",
     "\n",
@@ -31,6 +62,7 @@
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Customer (\n",
     "    CustomerId STRING,\n",
     "    CustomerTypeId STRING,\n",
+    "    IsActive BOOLEAN,\n",
     "    CustomerNamePrefix STRING,\n",
     "    FirstName STRING,\n",
     "    LastName STRING,\n",
@@ -43,7 +75,9 @@
     "    SecondaryEmail STRING,\n",
     "    CustomerEstablishedDate DATE,\n",
     "    CustomerRelationshipTypeId STRING,\n",
-    "    CustomerNote STRING\n",
+    "    CustomerNote STRING,\n",
+    "    CreatedBy STRING,\n",
+    "    UpdatedBy STRING\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
@@ -81,6 +115,7 @@
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Location (\n",
     "    LocationId STRING,\n",
     "    LocationName STRING,\n",
+    "    IsActive BOOLEAN,\n",
     "    LocationAddressLine1 STRING,\n",
     "    LocationAddressLine2 STRING,\n",
     "    LocationCity STRING,\n",
@@ -101,7 +136,9 @@
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerLocation (\n",
     "    CustomerId STRING,\n",
-    "    LocationId STRING\n",
+    "    LocationId STRING,\n",
+    "    PeriodStartDate DATE,\n",
+    "    PeriodEndDate DATE\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
@@ -117,7 +154,7 @@
     "    CustomerAccountTypeId STRING,\n",
     "    CustomerAccountOpenedDate DATE,\n",
     "    CustomerAccountClosedDate DATE,\n",
-    "    CustomerAccountApplicationNumber INT,\n",
+    "    CustomerAccountApplicationNumber STRING,\n",
     "    CustomerId STRING,\n",
     "    ResponsibilityCenterId STRING,\n",
     "    LedgerId STRING,\n",
@@ -133,7 +170,9 @@
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.CustomerAccountLocation (\n",
     "    CustomerAccountId STRING,\n",
-    "    LocationId STRING\n",
+    "    LocationId STRING,\n",
+    "    PeriodStartDate DATE,\n",
+    "    PeriodEndDate DATE\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
@@ -157,11 +196,13 @@
     "    ListPrice DECIMAL(18,2),\n",
     "    CostPrice DECIMAL(18,2),\n",
     "    Weight DECIMAL(18,3),\n",
-    "    WeightUom STRING,\n",
-    "    ProductStatus STRING,\n",
+    "    WeightUom STRING,     -- kg, lb, oz\n",
+    "    ProductStatus STRING, -- active, inactive, discontinued\n",
     "    CreatedDate DATE,\n",
     "    UpdatedDate DATE,\n",
-    "    IsoCurrencyCode STRING DEFAULT 'USD'\n",
+    "    IsoCurrencyCode STRING,\n",
+    "    CreatedBy STRING,\n",
+    "    UpdatedBy STRING\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
@@ -177,7 +218,7 @@
     "    BrandLogoUrl STRING,\n",
     "    BrandCategoryId STRING,\n",
     "    BrandOwningPartyId STRING,\n",
-    "    IsActive BOOLEAN DEFAULT true\n",
+    "    IsActive BOOLEAN\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
@@ -203,8 +244,8 @@
     "# 11. Create Order table\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Order (\n",
-    "    OrderId STRING,\n",
-    "    OrderNumber STRING,\n",
+    "    OrderId STRING,       -- Unique identifer like UUID\n",
+    "    OrderNumber STRING,   -- Customer-facing order number\n",
     "    CustomerId STRING,\n",
     "    CustomerAccountId STRING,\n",
     "    OrderDate DATE,\n",
@@ -212,7 +253,7 @@
     "    OrderTotal DECIMAL(18,2),\n",
     "    SubTotal DECIMAL(18,2),\n",
     "    TaxAmount DECIMAL(18,2),\n",
-    "    ShippingAmount DECIMAL(18,2),\n",
+    "    ShippingAmount DECIMAL(18,2), -- ShipingCost, Standard retail transaction terminology\n",
     "    DiscountAmount DECIMAL(18,2),\n",
     "    PaymentMethod STRING,\n",
     "    ShippingAddress STRING,\n",
@@ -220,9 +261,10 @@
     "    OrderNotes STRING,\n",
     "    CreatedTimestamp TIMESTAMP,\n",
     "    UpdatedTimestamp TIMESTAMP,\n",
-    "    IsoCurrencyCode STRING DEFAULT 'USD',\n",
+    "    IsoCurrencyCode STRING,\n",
     "    StoreId STRING,\n",
-    "    SalesChannelId STRING\n",
+    "    SalesChannelId STRING,\n",
+    "    CreatedBy STRING \n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
@@ -235,14 +277,12 @@
     "    OrderId STRING,\n",
     "    OrderLineNumber INT,\n",
     "    ProductId STRING,\n",
-    "    ItemSku STRING,\n",
     "    ProductName STRING,\n",
     "    Quantity DECIMAL(18,2),\n",
     "    UnitPrice DECIMAL(18,2),\n",
     "    LineTotal DECIMAL(18,2),\n",
     "    DiscountAmount DECIMAL(18,2),\n",
-    "    TaxAmount DECIMAL(18,2),\n",
-    "    Status STRING\n",
+    "    TaxAmount DECIMAL(18,2)\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
@@ -254,9 +294,9 @@
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.OrderStatus (\n",
     "    OrderId STRING,\n",
     "    Status STRING,\n",
-    "    StatusDate TIMESTAMP,\n",
+    "    StatusDate TIMESTAMP, -- Last status change date\n",
     "    StatusNotes STRING,\n",
-    "    UpdatedBy STRING\n",
+    "    UpdatedBy STRING  -- Examples: SYSTEM.OrderProcessor, USER:sarah.jones, API:PaymentGateway, BATCH:NightlyProcessor\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
