deleted temp working files to keep code base clean

--- a/src/notebooks/schema/Retail_Data_Model_Simplified_12.ipynb
+++ b/src/notebooks/schema/Retail_Data_Model_Simplified_12.ipynb
@@ -8,10 +8,10 @@
     "# Retail Data Model - Simplified & Enhanced\n",
     "\n",
     "## Overview\n",
-    "This notebook contains the simplified retail data model, reduced from 64 tables to 14 tables while maintaining all essential retail functionality.\n",
+    "This notebook contains the simplified retail data model, reduced from 64 tables to 12 tables while maintaining all essential retail functionality.\n",
     "\n",
     "## Key Achievements\n",
-    "- **78% complexity reduction**: From 64 to 14 tables\n",
+    "- **81% complexity reduction**: From 64 to 12 tables\n",
     "- **Industry-aligned naming**: Standard retail terminology\n",
     "- **Fabric Lakehouse optimized**: Delta tables without unnecessary constraints\n",
     "- **Complete audit trail**: CreatedBy/UpdatedBy fields on key entities\n",
@@ -19,8 +19,8 @@
     "\n",
     "## Schema Structure\n",
     "- **Customer Management**: 7 tables (Customer, Location, Accounts, Relationships)\n",
-    "- **Product Catalog**: 3 tables (Product, Brand, BrandCategory)\n",
-    "- **Order Processing**: 4 tables (Order, OrderLine, OrderStatus, OrderPayment)\n",
+    "- **Product Catalog**: 2 tables (Product, Category)\n",
+    "- **Order Processing**: 3 tables (Order, OrderLine, OrderPayment)\n",
     "\n",
     "## Business Value\n",
     "- Faster development with simplified schema\n",
@@ -180,7 +180,7 @@
     "print(f\"✅ {SCHEMA_NAME}.CustomerAccountLocation table created!\")\n",
     "\n",
     "################################################################################################\n",
-    "# Products - 3 Tables\n",
+    "# Products - 2 Tables\n",
     "################################################################################################\n",
     "\n",
     "# 8. Create Product table\n",
@@ -189,18 +189,21 @@
     "    ProductId STRING,\n",
     "    ProductName STRING,\n",
     "    ProductDescription STRING,\n",
-    "    BrandId STRING,\n",
-    "    ProductSku STRING,\n",
-    "    ProductCategory STRING,\n",
-    "    ProductSubcategory STRING,\n",
+    "    BrandName STRING,\n",
+    "    ProductNumber STRING,\n",
+    "    Color STRING,\n",
+    "    ProductModel STRING,\n",
+    "    ProductCategoryID STRING,\n",
     "    ListPrice DECIMAL(18,2),\n",
-    "    CostPrice DECIMAL(18,2),\n",
+    "    StandardCost DECIMAL(18,2),\n",
     "    Weight DECIMAL(18,3),\n",
     "    WeightUom STRING,     -- kg, lb, oz\n",
     "    ProductStatus STRING, -- active, inactive, discontinued\n",
     "    CreatedDate DATE,\n",
-    "    UpdatedDate DATE,\n",
+    "    SellStartDate DATE,\n",
+    "    SellEndDate DATE,\n",
     "    IsoCurrencyCode STRING,\n",
+    "    UpdatedDate DATE,\n",
     "    CreatedBy STRING,\n",
     "    UpdatedBy STRING\n",
     ")\n",
@@ -211,37 +214,25 @@
     "\n",
     "# 9. Create Brand table\n",
     "create_table_sql = f\"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Brand (\n",
-    "    BrandId STRING,\n",
+    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Category(\n",
+    "    CategoryId STRING,\n",
+    "    ParentCategoryId STRING,\n",
+    "    CategoryDescription STRING,\n",
     "    BrandName STRING,\n",
-    "    BrandDescription STRING,\n",
     "    BrandLogoUrl STRING,\n",
-    "    BrandCategoryId STRING,\n",
-    "    BrandOwningPartyId STRING,\n",
     "    IsActive BOOLEAN\n",
     ")\n",
     "USING DELTA\n",
     "\"\"\"\n",
     "spark.sql(create_table_sql)\n",
-    "print(f\"✅ {SCHEMA_NAME}.Brand table created!\")\n",
+    "print(f\"✅ {SCHEMA_NAME}.Category table created!\")\n",
     "\n",
-    "# 10. Create BrandCategory table\n",
-    "create_table_sql = f\"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.BrandCategory (\n",
-    "    BrandCategoryId STRING,\n",
-    "    BrandCategoryName STRING,\n",
-    "    BrandCategoryDescription STRING\n",
-    ")\n",
-    "USING DELTA\n",
-    "\"\"\"\n",
-    "spark.sql(create_table_sql)\n",
-    "print(f\"✅ {SCHEMA_NAME}.BrandCategory table created!\")\n",
     "\n",
     "################################################################################################\n",
-    "# Orders - 4 Tables\n",
+    "# Orders - 3 Tables\n",
     "################################################################################################\n",
     "\n",
-    "# 11. Create Order table\n",
+    "# 10. Create Order table\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.Order (\n",
     "    OrderId STRING,       -- Unique identifer like UUID\n",
@@ -263,6 +254,7 @@
     "    UpdatedTimestamp TIMESTAMP,\n",
     "    IsoCurrencyCode STRING,\n",
     "    StoreId STRING,\n",
+    "    Status STRING,\n",
     "    SalesChannelId STRING,\n",
     "    CreatedBy STRING \n",
     ")\n",
@@ -271,7 +263,7 @@
     "spark.sql(create_table_sql)\n",
     "print(f\"✅ {SCHEMA_NAME}.Order table created!\")\n",
     "\n",
-    "# 12. Create OrderLine table\n",
+    "# 11. Create OrderLine table\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.OrderLine (\n",
     "    OrderId STRING,\n",
@@ -289,21 +281,7 @@
     "spark.sql(create_table_sql)\n",
     "print(f\"✅ {SCHEMA_NAME}.OrderLine table created!\")\n",
     "\n",
-    "# 13. Create OrderStatus table\n",
-    "create_table_sql = f\"\"\"\n",
-    "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.OrderStatus (\n",
-    "    OrderId STRING,\n",
-    "    Status STRING,\n",
-    "    StatusDate TIMESTAMP, -- Last status change date\n",
-    "    StatusNotes STRING,\n",
-    "    UpdatedBy STRING  -- Examples: SYSTEM.OrderProcessor, USER:sarah.jones, API:PaymentGateway, BATCH:NightlyProcessor\n",
-    ")\n",
-    "USING DELTA\n",
-    "\"\"\"\n",
-    "spark.sql(create_table_sql)\n",
-    "print(f\"✅ {SCHEMA_NAME}.OrderStatus table created!\")\n",
-    "\n",
-    "# 14. Create OrderPayment table\n",
+    "# 12. Create OrderPayment table\n",
     "create_table_sql = f\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS {SCHEMA_NAME}.OrderPayment (\n",
     "    OrderId STRING,\n",
@@ -320,7 +298,7 @@
     "print(f\"✅ {SCHEMA_NAME}.OrderPayment table created!\")\n",
     "\n",
     "print(f\"✅ All {SCHEMA_NAME} tables created successfully!\")\n",
-    "print(f\"📊 Total tables created: 14\")"
+    "print(f\"📊 Total tables created: 12\")"
    ]
   }
  ],
