--- a/src/notebooks/schema/GenerateLakehouseTablesSchema.ipynb
+++ b/src/notebooks/schema/GenerateLakehouseTablesSchema.ipynb
@@ -2,30 +2,41 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "433e03f0",
+   "id": "594acdb0",
    "metadata": {},
    "source": [
-    "Generate Create Table Statments for all tables in the lakehouse and (not working yet: save it to as text file in the Lakehouse Files folder)"
+    "Generate Create Table Statements for specified tables in the lakehouse"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0be07075",
+   "id": "f9727d32",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1\n",
-    "# Import required libraries and setup\n",
+    "# Configuration and Setup\n",
     "from pyspark.sql import functions as F\n",
     "import os\n",
     "from datetime import datetime\n",
     "\n",
-    "# Configuration\n",
-    "TARGET_SCHEMA_NAME = \"retail\"  # Change this to your desired schema name\n",
+    "# Configuration - UPDATE THESE VALUES\n",
+    "TARGET_SCHEMA_NAME = \"retail_simple\"  # Change this to your desired schema name\n",
+    "ALL_TABLES = False  # Set to True to process ALL tables, False to use SPECIFIED_TABLES\n",
     "\n",
-    "print(f\"🔍 Generating CREATE TABLE statements for all lakehouse tables\")\n",
+    "# Specify the table names you want to generate CREATE statements for (only used if ALL_TABLES = False)\n",
+    "SPECIFIED_TABLES = [\n",
+    "    \"Ledger\",\n",
+    "    \"LedgerAccount\", \n",
+    "    \"LedgerAccountCategory\",\n",
+    "    \"LedgerAccountType\",\n",
+    "    \"LedgerType\"\n",
+    "]\n",
+    "\n",
+    "print(f\"🔍 Generating CREATE TABLE statements for lakehouse tables\")\n",
     "print(f\"🎯 Target schema name: {TARGET_SCHEMA_NAME}\")\n",
+    "print(f\"🔧 Mode: {'ALL TABLES' if ALL_TABLES else f'{len(SPECIFIED_TABLES)} specified tables'}\")\n",
     "print(f\"🕐 Started at: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
     "print(\"-\" * 70)"
    ]
@@ -33,214 +44,110 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df0ae38a",
+   "id": "e0cff485",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 2\n",
-    "# Setup output path using a different folder\n",
-    "import os\n",
-    "\n",
-    "# Try Files/create_tables_text folder instead\n",
-    "output_folder = 'Files/create_tables_text/'\n",
-    "output_filename = 'CreateTablesText.txt'\n",
-    "output_path = os.path.join(output_folder, output_filename)\n",
-    "\n",
-    "print(f\"📁 Output file path: {output_path}\")\n",
-    "print(\"-\" * 50)"
+    "#  Step 2\n",
+    "#  Get tables and generate CREATE statements\n",
+    "try:\n",
+    "    # Get all tables\n",
+    "    tables_df = spark.sql(\"SHOW TABLES\")\n",
+    "    all_tables = [row['tableName'] for row in tables_df.collect()]\n",
+    "    \n",
+    "    # Determine which tables to process\n",
+    "    if ALL_TABLES:\n",
+    "        tables_to_process = all_tables\n",
+    "        print(f\"📋 Processing ALL {len(all_tables)} tables in lakehouse\")\n",
+    "    else:\n",
+    "        tables_to_process = [table for table in SPECIFIED_TABLES if table in all_tables]\n",
+    "        missing_tables = [table for table in SPECIFIED_TABLES if table not in all_tables]\n",
+    "        print(f\"📋 Found {len(all_tables)} total tables in lakehouse\")\n",
+    "        print(f\"✅ Found {len(tables_to_process)} specified tables: {', '.join(tables_to_process)}\")\n",
+    "        if missing_tables:\n",
+    "            print(f\"⚠️  Missing tables: {', '.join(missing_tables)}\")\n",
+    "    \n",
+    "    print(\"-\" * 70)\n",
+    "    \n",
+    "    # Generate CREATE TABLE statements\n",
+    "    if tables_to_process:\n",
+    "        output_content = []\n",
+    "        \n",
+    "        # Add header\n",
+    "        output_content.append(\"# Generated CREATE TABLE Statements\")\n",
+    "        output_content.append(f\"# Generated on: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+    "        output_content.append(f\"# Target schema: {TARGET_SCHEMA_NAME}\")\n",
+    "        output_content.append(f\"# Mode: {'ALL TABLES' if ALL_TABLES else 'SPECIFIED TABLES'}\")\n",
+    "        output_content.append(\"\")\n",
+    "        output_content.append(\"# Configuration\")\n",
+    "        output_content.append(f'SCHEMA_NAME = \"{TARGET_SCHEMA_NAME}\"')\n",
+    "        output_content.append('spark.sql(f\"CREATE DATABASE IF NOT EXISTS {SCHEMA_NAME}\")')\n",
+    "        output_content.append('print(f\"✅ {SCHEMA_NAME} schema ready!\")')\n",
+    "        output_content.append(\"\")\n",
+    "        \n",
+    "        successful_tables = 0\n",
+    "        \n",
+    "        for i, table_name in enumerate(tables_to_process, 1):\n",
+    "            try:\n",
+    "                print(f\"🔄 Processing table {i}/{len(tables_to_process)}: {table_name}\")\n",
+    "                \n",
+    "                # Get table schema\n",
+    "                describe_df = spark.sql(f\"DESCRIBE {table_name}\")\n",
+    "                columns = describe_df.collect()\n",
+    "                valid_columns = [col for col in columns \n",
+    "                               if not col['col_name'].startswith('#') and col['col_name'].strip() != '']\n",
+    "                \n",
+    "                if valid_columns:\n",
+    "                    # Generate CREATE TABLE statement\n",
+    "                    output_content.append(f\"# {i}. Create {table_name} table\")\n",
+    "                    output_content.append('create_table_sql = f\"\"\"')\n",
+    "                    output_content.append(f'CREATE TABLE IF NOT EXISTS {{SCHEMA_NAME}}.{table_name} (')\n",
+    "                    \n",
+    "                    # Add column definitions\n",
+    "                    for j, col in enumerate(valid_columns):\n",
+    "                        col_name = col['col_name']\n",
+    "                        data_type = col['data_type'].upper()\n",
+    "                        \n",
+    "                        # Add comma for all but last column\n",
+    "                        comma = \",\" if j < len(valid_columns) - 1 else \"\"\n",
+    "                        output_content.append(f'    {col_name} {data_type}{comma}')\n",
+    "                    \n",
+    "                    output_content.append(')')\n",
+    "                    output_content.append('USING DELTA')\n",
+    "                    output_content.append('\"\"\"')\n",
+    "                    output_content.append('spark.sql(create_table_sql)')\n",
+    "                    output_content.append(f'print(f\"✅ {{SCHEMA_NAME}}.{table_name} table created!\")')\n",
+    "                    output_content.append(\"\")\n",
+    "                    \n",
+    "                    successful_tables += 1\n",
+    "                    \n",
+    "            except Exception as e:\n",
+    "                print(f\"❌ Error processing table {table_name}: {str(e)}\")\n",
+    "        \n",
+    "        print(f\"\\n📊 Successfully processed {successful_tables}/{len(tables_to_process)} tables\")\n",
+    "        \n",
+    "    else:\n",
+    "        output_content = [\"# No tables found to process\"]\n",
+    "        print(\"⚠️  No tables found to process\")\n",
+    "        \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error: {str(e)}\")\n",
+    "    output_content = []"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a973fe6c",
+   "id": "b72f5838",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 3\n",
-    "# Get all tables in the lakehouse\n",
-    "try:\n",
-    "    tables_df = spark.sql(\"SHOW TABLES\")\n",
-    "    all_tables = [row['tableName'] for row in tables_df.collect()]\n",
-    "    \n",
-    "    print(f\"📋 Found {len(all_tables)} tables in lakehouse:\")\n",
-    "    for i, table in enumerate(all_tables, 1):\n",
-    "        print(f\"  {i:2d}. {table}\")\n",
-    "    print(\"-\" * 70)\n",
-    "    \n",
-    "except Exception as e:\n",
-    "    print(f\"❌ Error getting tables: {str(e)}\")\n",
-    "    all_tables = []"
+    "# Display generated CREATE TABLE statements\n",
+    "if 'output_content' in locals() and output_content:\n",
+    "    full_content = \"\\n\".join(output_content)\n",
+    "    print(full_content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97d69db7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 4\n",
-    "#  Generate CREATE TABLE statements\n",
-    "if all_tables:\n",
-    "    output_content = []\n",
-    "    \n",
-    "    # Add header\n",
-    "    output_content.append(\"# Generated CREATE TABLE Statements\")\n",
-    "    output_content.append(f\"# Generated on: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}\")\n",
-    "    output_content.append(f\"# Total tables: {len(all_tables)}\")\n",
-    "    output_content.append(f\"# Target schema: {TARGET_SCHEMA_NAME}\")\n",
-    "    output_content.append(\"\")\n",
-    "    output_content.append(\"# Configuration\")\n",
-    "    output_content.append(f'SCHEMA_NAME = \"{TARGET_SCHEMA_NAME}\"')\n",
-    "    output_content.append('spark.sql(f\"CREATE DATABASE IF NOT EXISTS {SCHEMA_NAME}\")')\n",
-    "    output_content.append('print(f\"✅ {SCHEMA_NAME} schema ready!\")')\n",
-    "    output_content.append(\"\")\n",
-    "    \n",
-    "    successful_tables = 0\n",
-    "    failed_tables = []\n",
-    "    \n",
-    "    for i, table_name in enumerate(all_tables, 1):\n",
-    "        try:\n",
-    "            print(f\"🔄 Processing table {i}/{len(all_tables)}: {table_name}\")\n",
-    "            \n",
-    "            # Get table schema\n",
-    "            describe_df = spark.sql(f\"DESCRIBE {table_name}\")\n",
-    "            columns = describe_df.collect()\n",
-    "            \n",
-    "            # Filter valid columns\n",
-    "            valid_columns = [col for col in columns \n",
-    "                           if not col['col_name'].startswith('#') and col['col_name'].strip() != '']\n",
-    "            \n",
-    "            if valid_columns:\n",
-    "                # Generate CREATE TABLE statement\n",
-    "                output_content.append(f\"# {i}. Create {table_name} table\")\n",
-    "                output_content.append('create_table_sql = f\"\"\"')\n",
-    "                output_content.append(f'CREATE TABLE IF NOT EXISTS {{SCHEMA_NAME}}.{table_name} (')\n",
-    "                \n",
-    "                # Add column definitions\n",
-    "                for j, col in enumerate(valid_columns):\n",
-    "                    col_name = col['col_name']\n",
-    "                    data_type = col['data_type']\n",
-    "                    \n",
-    "                    # Standardize data types\n",
-    "                    if 'bigint' in data_type.lower():\n",
-    "                        data_type = 'BIGINT'\n",
-    "                    elif 'int' in data_type.lower():\n",
-    "                        data_type = 'INT'\n",
-    "                    elif 'string' in data_type.lower():\n",
-    "                        data_type = 'STRING'\n",
-    "                    elif 'double' in data_type.lower():\n",
-    "                        data_type = 'DOUBLE'\n",
-    "                    elif 'decimal' in data_type.lower():\n",
-    "                        data_type = data_type.upper()\n",
-    "                    elif 'boolean' in data_type.lower():\n",
-    "                        data_type = 'BOOLEAN'\n",
-    "                    elif 'timestamp' in data_type.lower():\n",
-    "                        data_type = 'TIMESTAMP'\n",
-    "                    elif 'date' in data_type.lower():\n",
-    "                        data_type = 'DATE'\n",
-    "                    elif 'binary' in data_type.lower():\n",
-    "                        data_type = 'BINARY'\n",
-    "                    \n",
-    "                    # Add comma for all but last column\n",
-    "                    comma = \",\" if j < len(valid_columns) - 1 else \"\"\n",
-    "                    output_content.append(f'    {col_name} {data_type}{comma}')\n",
-    "                \n",
-    "                output_content.append(')')\n",
-    "                output_content.append('USING DELTA')\n",
-    "                output_content.append('\"\"\"')\n",
-    "                output_content.append('spark.sql(create_table_sql)')\n",
-    "                output_content.append(f'print(f\"✅ {{SCHEMA_NAME}}.{table_name} table created!\")')\n",
-    "                output_content.append(\"\")\n",
-    "                \n",
-    "                successful_tables += 1\n",
-    "                \n",
-    "            else:\n",
-    "                print(f\"⚠️  No valid columns found for table: {table_name}\")\n",
-    "                failed_tables.append(table_name)\n",
-    "                \n",
-    "        except Exception as e:\n",
-    "            print(f\"❌ Error processing table {table_name}: {str(e)}\")\n",
-    "            failed_tables.append(table_name)\n",
-    "    \n",
-    "    print(f\"\\n📊 Processing Summary:\")\n",
-    "    print(f\"   • Total tables: {len(all_tables)}\")\n",
-    "    print(f\"   • Successful: {successful_tables}\")\n",
-    "    print(f\"   • Failed: {len(failed_tables)}\")\n",
-    "    \n",
-    "    if failed_tables:\n",
-    "        print(f\"   • Failed tables: {', '.join(failed_tables)}\")\n",
-    "    \n",
-    "else:\n",
-    "    output_content = [\"# No tables found in lakehouse\"]\n",
-    "    print(\"⚠️  No tables found to process\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "582163c6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 5\n",
-    "# Display full generated content for manual copying\n",
-    "print(\"🔍 FULL GENERATED CONTENT:\")\n",
-    "print(\"=\" * 80)\n",
-    "print(\"📋 Copy the content below and paste into your GeneratedCreateTablesStmts.ipynb:\")\n",
-    "print(\"=\" * 80)\n",
-    "\n",
-    "try:\n",
-    "    if 'output_content' in locals() and output_content:\n",
-    "        full_content = \"\\n\".join(output_content)\n",
-    "        \n",
-    "        print(f\"📊 Content Statistics:\")\n",
-    "        print(f\"   • Total lines: {len(output_content)}\")\n",
-    "        print(f\"   • Total characters: {len(full_content)}\")\n",
-    "        print(f\"   • First table: {all_tables[0] if all_tables else 'None'}\")\n",
-    "        print(f\"   • Last table: {all_tables[-1] if all_tables else 'None'}\")\n",
-    "        print(f\"   • Target schema: {TARGET_SCHEMA_NAME}\")\n",
-    "        print()\n",
-    "        \n",
-    "        print(\"📄 GENERATED CREATE TABLE STATEMENTS:\")\n",
-    "        print(\"-\" * 80)\n",
-    "        print(full_content)\n",
-    "        print(\"-\" * 80)\n",
-    "        \n",
-    "        print(f\"\\n✅ Content displayed successfully!\")\n",
-    "        print(f\"🎯 Next Steps:\")\n",
-    "        print(f\"   1. Copy the above content\")\n",
-    "        print(f\"   2. Paste into GeneratedCreateTablesStmts.ipynb\")\n",
-    "        print(f\"   3. Execute to create all {len(all_tables)} tables in {TARGET_SCHEMA_NAME} schema\")\n",
-    "        \n",
-    "    else:\n",
-    "        print(\"❌ No content generated yet - run previous cells first\")\n",
-    "        \n",
-    "except Exception as e:\n",
-    "    print(f\"❌ Error displaying content: {str(e)}\")\n",
-    "    \n",
-    "print(\"\\n\" + \"=\" * 80)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4bba2d4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step 6\n",
-    "# Save output to a file in the same lakehouse, to folder and file defined in Step 2,\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6bd6e896",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
