--- a/src/notebooks/data/Generate_Product_Samples.ipynb
+++ b/src/notebooks/data/Generate_Product_Samples.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fbbdffb9",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b8c7180b",
    "metadata": {},
    "outputs": [
@@ -302,6 +302,68 @@
     "print(f\"📊 Total Records: {len(df)}\")\n",
     "print(f\"📈 Columns: {', '.join(df.columns)}\")\n",
     "print(\"\\n✅ Product sample data generation complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f1f4829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test Reading Uploaded File from Azure Databricks Workspace\n",
+    "print(\"🔍 TESTING FILE READ FROM WORKSPACE\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "# Note: Replace 'your_email' with your actual email address from the workspace path\n",
+    "# Example paths to try (update with your actual email):\n",
+    "# \"/Workspace/Users/your.email@company.com/source_data/product_tents.csv\"\n",
+    "\n",
+    "# Test different possible paths\n",
+    "possible_paths = [\n",
+    "    \"/Workspace/Users/your_email/source_data/product_tents.csv\",  # Replace your_email\n",
+    "    \"/Workspace/source_data/product_tents.csv\",\n",
+    "    \"/source_data/product_tents.csv\"\n",
+    "]\n",
+    "\n",
+    "print(\"🎯 Attempting to read uploaded file...\")\n",
+    "print(\"(Update the email address in the path below)\")\n",
+    "\n",
+    "# Try to read the file - you'll need to update the path\n",
+    "try:\n",
+    "    # UPDATE THIS PATH with your actual email address:\n",
+    "    file_path = \"/Workspace/Users/your_email/source_data/product_tents.csv\"\n",
+    "    \n",
+    "    print(f\"📂 Trying path: {file_path}\")\n",
+    "    df = spark.read.csv(file_path, header=True, inferSchema=True)\n",
+    "    \n",
+    "    print(\"✅ File read successfully!\")\n",
+    "    print(f\"📊 Shape: {df.count()} rows x {len(df.columns)} columns\")\n",
+    "    print(f\"📋 Columns: {df.columns}\")\n",
+    "    \n",
+    "    print(\"\\n🔍 Schema:\")\n",
+    "    df.printSchema()\n",
+    "    \n",
+    "    print(\"\\n📖 First 10 rows:\")\n",
+    "    df.show(10)\n",
+    "    \n",
+    "    print(\"\\n📈 Data Summary:\")\n",
+    "    print(f\"  Total Records: {df.count()}\")\n",
+    "    print(f\"  Brand Distribution:\")\n",
+    "    df.groupBy(\"BrandName\").count().show()\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Error reading file: {e}\")\n",
+    "    print(\"\\n💡 To fix this:\")\n",
+    "    print(\"1. Check your workspace path in Azure Databricks\")\n",
+    "    print(\"2. Update the file_path variable above with your actual email\")\n",
+    "    print(\"3. Verify the file name is correct (product_tents.csv)\")\n",
+    "    print(\"4. Make sure the file was uploaded to source_data folder\")\n",
+    "    \n",
+    "    print(\"\\n🔍 Alternative: Use dbutils to explore your workspace:\")\n",
+    "    print(\"   %fs ls /Workspace/Users/\")\n",
+    "    print(\"   %fs ls /Workspace/Users/your_actual_email/\")\n",
+    "    print(\"   %fs ls /Workspace/Users/your_actual_email/source_data/\")"
    ]
   }
  ],
